--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,13 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'AWS CloudFormation Stack status checker for GitHub Action'
+description: 'Retrives the AWS CloudFormation Stack status'
+author: 'Kenji Saito'
 inputs:
-  milliseconds: # change this
+  stack-name:
     required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+    description: 'The name of AWS CloudFormation Stack to be status checked.'
+outputs:
+  status:
+    description: 'The status of AWS CloudFormation Stack.'
 runs:
   using: 'node16'
-  main: 'dist/index.js'
+  main: 'dist/index.mjs'
