--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -21,18 +21,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-
       - name: Set Node.js 16.x
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
 
+      - uses: actions/checkout@v3
+
       - name: Install dependencies
         run: yarn install
 
       - name: Rebuild the dist/ directory
-        run: yarn build && yarn package
+        run: rm -rf dist && yarn build && yarn package
 
       - name: Compare the expected and actual dist/ directories
         run: |
