--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "esModuleInterop": true,
     "moduleResolution": "Node"
   },
-  "exclude": ["node_modules", "**/*.test.ts"]
+  "exclude": ["node_modules", "**/*.test.ts", "test"]
 }
