--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,6 +52,7 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: us-west-2
     steps:
 
     - name: generate timestamp
@@ -93,14 +94,3 @@ jobs:
       working-directory: test
       run: yarn install && cdk destroy -c name="${TIMESTAMP}" -c region=us-east-1 -f
 
-  no_credemtial:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - uses: ./
-      id: stack-status
-      with:
-        stack-name: aws-cloudformation-stack-status-checker-test
-
-    - name: 'test'
-      run: echo ${{ steps.stack-status.outputs.status }}
