--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "ts-jest": "*",
     "typescript": "*"
   },
+  "resolutions": {
+    "json5": ">=2.2.2"
+  },
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
