--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    
+
     - uses: pnpm/action-setup@v2
       name: Install pnpm
       id: pnpm-install
@@ -40,7 +40,7 @@ jobs:
     - name: setup
       run: pnpm -g i prettier rimraf
     - name: build
-      run: pnpm build && pnpm format && pnpm lint && pnpm package && pnpm test
+      run: pnpm build && pnpm lint && pnpm package && pnpm test
 
     - name: configure aws credentials
       uses: aws-actions/configure-aws-credentials@v4
@@ -78,16 +78,13 @@ jobs:
           - recursive: true
             cwd: test
             args: [--no-frozen-lockfile, --strict-peer-dependencies]
+          - args: [--global, aws-cdk]
 
     - name: Use Node.js 20.x
       uses: actions/setup-node@v3
       with:
         node-version: 20.x
         check-latest: true
-
-    - name: Install AWS CDK and pnpm
-      run: |
-        pnpm -g i aws-cdk
 
     - name: configure aws credentials
       uses: aws-actions/configure-aws-credentials@v4
