--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     },
     "verbose": true
   },
-  "packageManager": "pnpm@8.7.1",
+  "packageManager": "pnpm@8.15.5+sha256.4b4efa12490e5055d59b9b9fc9438b7d581a6b7af3b5675eb5c5f447cee1a589",
   "engines": {
     "npm": "use pnpm please!",
     "pnpm": ">=8.7.1"
