--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -74,6 +74,7 @@ jobs:
       name: Install pnpm
       id: pnpm-install
       with:
+        version: latest
         run_install: |
           - recursive: true
             cwd: test
