--- a/package.json
+++ b/package.json
@@ -34,16 +34,18 @@
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
-    "@typescript-eslint/parser": "^6.21.0",
-    "@vercel/ncc": "^0.36.1",
-    "eslint": "^8.57.0",
+    "@vercel/ncc": "^0.38.1",
+    "eslint": "^9.1.1",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-github": "^4.10.2",
-    "eslint-plugin-jest": "^27.9.0",
+    "eslint-plugin-jest": "^28.2.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
     "js-yaml": "^4.1.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.7.1"
   },
   "jest": {
     "preset": "ts-jest",
