--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.1",
-    "@aws-sdk/client-cloudformation": "^3.569.0"
+    "@aws-sdk/client-cloudformation": "^3.572.0"
   },
   "devDependencies": {
-    "@types/node": "^20.12.8",
+    "@types/node": "^20.12.11",
     "@vercel/ncc": "^0.38.1",
     "eslint": "^9.2.0",
     "eslint-config-prettier": "^9.1.0",
@@ -68,6 +68,7 @@
   },
   "engines": {
     "npm": "use pnpm please!",
-    "pnpm": ">=8.7.1"
-  }
+    "pnpm": ">=9.0.0"
+  },
+  "packageManager": "pnpm@9.1.0+sha512.67f5879916a9293e5cf059c23853d571beaf4f753c707f40cb22bed5fb1578c6aad3b6c4107ccb3ba0b35be003eb621a16471ac836c87beb53f9d54bb4612724"
 }
