--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -18,10 +18,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set Node.js 20.x
+      - name: Set Node.js 22.x
         uses: actions/setup-node@v4
         with:
-          node-version: 20.x
+          node-version: 22.x
 
       - uses: pnpm/action-setup@v4
         name: Install pnpm
@@ -30,8 +30,10 @@ jobs:
             - recursive: true
               args: [--no-frozen-lockfile, --strict-peer-dependencies]
 
+      - uses: oven-sh/setup-bun@v2
+
       - name: Rebuild the dist/ directory
-        run: rm -rf dist && pnpm build && pnpm package
+        run: rm -rf dist && bun run --bun build && bun run --bun package
 
       - name: Compare the expected and actual dist/ directories
         run: |
