--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,10 +23,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Use Node.js 20.x
+    - name: Use Node.js 22.x
       uses: actions/setup-node@v4
       with:
-        node-version: 20.x
+        node-version: 22.x
         check-latest: true
 
     - uses: pnpm/action-setup@v4
@@ -36,10 +36,10 @@ jobs:
           - recursive: true
             args: [--no-frozen-lockfile, --strict-peer-dependencies]
 
-    - name: setup
-      run: pnpm -g i prettier rimraf
+    - uses: oven-sh/setup-bun@v2
+
     - name: build
-      run: pnpm build && pnpm lint && pnpm package
+      run: bun run --bun build && bun run --bun lint && bun run --bun package
 
     - name: configure aws credentials
       uses: aws-actions/configure-aws-credentials@v4
@@ -76,10 +76,10 @@ jobs:
         role-session-name: GitHubActions
         aws-region: ${{ env.AWS_REGION }}
 
-    - name: Use Node.js 20.x
+    - name: Use Node.js 22.x
       uses: actions/setup-node@v4
       with:
-        node-version: 20.x
+        node-version: 22.x
         check-latest: true
 
     - uses: pnpm/action-setup@v4
