--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -19,9 +19,11 @@ jobs:
       - uses: actions/checkout@v5
 
       - name: Set Node.js 22.x
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v5
         with:
           node-version: 22.x
+          check-latest: true
+          package-manager-cache: false
 
       - uses: pnpm/action-setup@v4
         name: Install pnpm
