--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,10 +24,11 @@ jobs:
     - uses: actions/checkout@v5
 
     - name: Use Node.js 22.x
-      uses: actions/setup-node@v4
+      uses: actions/setup-node@v5
       with:
         node-version: 22.x
         check-latest: true
+        package-manager-cache: false
 
     - uses: pnpm/action-setup@v4
       name: Install pnpm
