--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -78,10 +78,11 @@ jobs:
         aws-region: ${{ env.AWS_REGION }}
 
     - name: Use Node.js 22.x
-      uses: actions/setup-node@v4
+      uses: actions/setup-node@v5
       with:
         node-version: 22.x
         check-latest: true
+        package-manager-cache: false
 
     - uses: pnpm/action-setup@v4
       name: Install pnpm
