--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -15,12 +15,12 @@ jobs:
     steps:
       - uses: actions/checkout@v5
 
-      - name: Set Node.js 22.x
+      - name: Use Node.js
         uses: actions/setup-node@v5
         with:
-          node-version: 22.x
+          node-version: 'lts/*'
           check-latest: true
-          package-manager-cache: false
+          package-manager-cache: pnpm
 
       - uses: pnpm/action-setup@v4
         name: Install pnpm
