--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,3 +4,9 @@ packages:
 
 enablePrePostScripts: true
 strictPeerDependencies: false
+
+# one day
+minimumReleaseAge: 1440
+minimumReleaseAgeExclude:
+ - pnpm
+ - appstore-connect-jwt-generator-core
