--- a/action.yml
+++ b/action.yml
@@ -12,5 +12,5 @@ outputs:
   status:
     description: 'The status of AWS CloudFormation Stack.'
 runs:
-  using: 'node20'
-  main: 'dist/index.mjs'
+  using: 'node24'
+  main: 'dist/index.js'
