--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -10,11 +10,15 @@ minimumReleaseAgeExclude:
   - pnpm
 
 overrides:
+  '@eslint/eslintrc>ajv': ^6.12.4
+  '@eslint/js': ^9
+  '@stylistic/eslint-plugin': '>=5.0.0'
+  ajv@<8.18.0: '>=8.18.0'
   diff@>=4.0.0 <4.0.4: '>=4.0.4'
+  eslint: ^9
+  eslint>ajv: ^6.12.4
+  fast-xml-parser@>=4.1.3 <5.3.6: '>=5.3.6'
   fast-xml-parser@>=4.3.6 <=5.3.3: '>=5.3.4'
   glob@>=10.3.7 <=11.0.3: '>=11.1.0'
-  '@eslint/js': ^9
-  eslint: ^9
-  '@stylistic/eslint-plugin': '>=5.0.0'
 
 strictPeerDependencies: false
