--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -10,6 +10,7 @@ minimumReleaseAgeExclude:
   - pnpm
 
 overrides:
+  fast-xml-parser@<5.3.8: '>=5.3.8'
   minimatch@<10.2.1: '>=10.2.1'
 
 strictPeerDependencies: false
